Added get users by owner building and room
